--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -310,9 +310,9 @@
             <img src="https://kulosikham.github.io/allkey/netshop.display.minecraftserver.png" alt="Product Name" class="product-image">
         </div>
         <div class="product-details">
-            <h1>Product Name</h1>
+            <h1>Shared Entry Hosting</h1>
             <p class="category">Category: Hosting and Cloud</p>
-            <p>Deskripsi Produk: Produk ini memberikan solusi hosting yang terjangkau untuk server Minecraft dengan performa tinggi dan stabilitas maksimal.</p>
+            <p>Produk ini memberikan solusi hosting yang terjangkau untuk server Minecraft dengan performa tinggi dan stabilitas maksimal.</p>
 
             <div class="product-select">
                 <label for="productType">Pilih Tipe Produk:</label>
@@ -363,6 +363,7 @@
                 "name": "Shared Entry 1GB",
                 "price": "IDR 4.999",
                 "features": {
+                    "Virtual CPU": "200", 
                     "RAM": "1GB",
                     "Storage": "5GB SSD",
                     "Bandwidth": "Unmetered",
@@ -382,8 +383,9 @@
                 "name": "Shared Entry 2GB",
                 "price": "IDR 9.998",
                 "features": {
+                    "Virtual CPU": "200", 
                     "RAM": "2GB",
-                    "Storage": "10GB SSD",
+                    "Storage": "7GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -401,8 +403,9 @@
                 "name": "Shared Entry 3GB",
                 "price": "IDR 14.997",
                 "features": {
+                    "Virtual CPU": "300", 
                     "RAM": "3GB",
-                    "Storage": "15GB SSD",
+                    "Storage": "10GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -420,8 +423,9 @@
                 "name": "Shared Entry 4GB",
                 "price": "IDR 19.996",
                 "features": {
+                    "Virtual CPU": "300", 
                     "RAM": "4GB",
-                    "Storage": "20GB SSD",
+                    "Storage": "12GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -439,8 +443,9 @@
                 "name": "Shared Entry 5GB",
                 "price": "IDR 24.995",
                 "features": {
+                    "Virtual CPU": "400", 
                     "RAM": "5GB",
-                    "Storage": "25GB SSD",
+                    "Storage": "15GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -458,8 +463,9 @@
                 "name": "Shared Entry 6GB",
                 "price": "IDR 29.994",
                 "features": {
+                    "Virtual CPU": "400", 
                     "RAM": "6GB",
-                    "Storage": "30GB SSD",
+                    "Storage": "17GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -477,8 +483,9 @@
                 "name": "Shared Entry 7GB",
                 "price": "IDR 34.993",
                 "features": {
+                    "Virtual CPU": "400", 
                     "RAM": "7GB",
-                    "Storage": "35GB SSD",
+                    "Storage": "18GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -496,8 +503,9 @@
                 "name": "Shared Entry 8GB",
                 "price": "IDR 39.992",
                 "features": {
+                    "Virtual CPU": "400", 
                     "RAM": "8GB",
-                    "Storage": "40GB SSD",
+                    "Storage": "20GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -515,8 +523,9 @@
                 "name": "Shared Entry 9GB",
                 "price": "IDR 44.991",
                 "features": {
+                    "Virtual CPU": "600", 
                     "RAM": "9GB",
-                    "Storage": "45GB SSD",
+                    "Storage": "25GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -534,8 +543,9 @@
                 "name": "Shared Entry 10GB",
                 "price": "IDR 49.990",
                 "features": {
+                    "Virtual CPU": "600", 
                     "RAM": "10GB",
-                    "Storage": "50GB SSD",
+                    "Storage": "30GB SSD",
                     "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
